<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Carryvent</string>
    <string name="action_settings">Settings</string>
    <string name="listaEventos">Lista de Eventos</string>
    <string name="listaPasajeros">Lista de Pasajeros</string>
    <string name="mostrarRuta">Mostrar Ruta</string>
    <string name="seleccioneEvento">Seleccione un evento</string>
    <string name="imagenEvento">Imagen del Evento</string>
    <string name="obtenerLista">Obtener lista de pasajeros</string>
    <string name="obtenerRuta">Obtener ruta de viaje</string>
    <string name="leerCodigo">Leer código QR</string>
    <string name="ida">Ida</string>
    <string name="regreso">Regreso</string>

</resources>
