<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".Carryvent" >

	<LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:gravity="center"
	    android:baselineAligned="false"
	    android:weightSum="10"
	    android:orientation="horizontal">
	    
	    <LinearLayout 
	        android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:gravity="center"
		    android:layout_weight="7"
		    android:orientation="vertical">
		    
	        <Button
	            android:id="@+id/botonEventos"
	            android:background="@drawable/button"
	            android:layout_width="match_parent"
	            android:layout_height="65dp"
	            android:layout_marginTop="2dp"
	            android:layout_marginBottom="2dp"
	            android:onClick="listaEventos"
	            android:text="@string/listaEventos"
	            android:textColor="#fff"
	            android:textSize="25sp" />
		
		    <Button
		        android:id="@+id/botonPasajeros"
		        android:background="@drawable/button"
		        android:layout_width="match_parent"
		        android:layout_height="65dp"
		        android:layout_marginTop="2dp"
	            android:layout_marginBottom="2dp"
		        android:onClick="listaPasajeros"
		        android:textSize="25sp"
		        android:textColor="#fff"
		        android:text="@string/listaPasajeros" />
	
		    <Button
		        android:id="@+id/botonRuta"
		        android:background="@drawable/button"
		        android:layout_width="match_parent"
		        android:layout_height="65dp"
		        android:layout_marginTop="2dp"
	            android:layout_marginBottom="2dp"
		        android:onClick="mostrarRuta"
		        android:textSize="25sp"
		        android:textColor="#fff"
		        android:text="@string/mostrarRuta" />
	        
	    </LinearLayout>
 
   	</LinearLayout>

</ScrollView>
