<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/background" >

    <LinearLayout
        android:id="@+id/cabecera"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_gravity="center_horizontal"
	    android:gravity="center"
	    android:baselineAligned="false"
	    android:weightSum="10"
	    android:orientation="horizontal">
	    
	    <LinearLayout 
	        android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:gravity="left"
		    android:layout_weight="8"
		    android:orientation="vertical">
		    
	        <TextView
	            android:id="@+id/textoVistaEventos"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/seleccioneEvento" />
		</LinearLayout>
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/lista"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/cabecera"
	    android:layout_gravity="center_horizontal"
	    android:gravity="center"
	    android:baselineAligned="false"
	    android:weightSum="10"
	    android:orientation="horizontal">	
		
	    <LinearLayout 
	        android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:gravity="center"
		    android:layout_weight="8"
		    android:orientation="vertical">
	
	        <Spinner
	            android:id="@+id/listaEventos"
	            android:background="@drawable/spinner" 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
		</LinearLayout>
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/informacion"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/lista"
	    android:layout_gravity="center_horizontal"
	    android:gravity="center"
	    android:baselineAligned="false"
	    android:weightSum="10"
	    android:orientation="horizontal">	
		
        <ScrollView 
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:background="@drawable/informacion"
			android:layout_weight="8" >
	        
		    <LinearLayout 
		        android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:gravity="left"
			    android:orientation="vertical">
		        
		        <ImageView
		            android:id="@+id/imagenEvento"
		            android:layout_width="150dp"
		            android:layout_height="150dp"
		            android:layout_gravity="center"
		            android:contentDescription="@string/imagenEvento" />
		        
	       		<TextView
		            android:id="@+id/nombreEvento"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" />
		
		        <TextView
		            android:id="@+id/lugarEvento"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" />
		
		        <TextView
		            android:id="@+id/fechaEvento"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" />
		
		        <TextView
		            android:id="@+id/horaEvento"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" />
		        
		        <Button
		            android:id="@+id/obtenerLista"
		            android:background="@drawable/button"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_margin="5dp"
		            android:onClick="obtenerListaPasajeros"
		            android:textColor="#fff"
			        android:textSize="25sp"
		            android:text="@string/obtenerLista" />
		        
		        <Button
		            android:id="@+id/obtenerRuta"
		            android:background="@drawable/button"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_margin="5dp"
		            android:onClick="obtenerRuta"
		            android:textColor="#fff"
			        android:textSize="25sp"
		            android:text="@string/obtenerRuta" />
    		
			</LinearLayout>
		</ScrollView>
	</LinearLayout>
</RelativeLayout>
